# Inteli-College-2024-2B-T10-SI08-G04

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
document/: document.md
src/dataapp/: .env.example  backend.Dockerfile  frontend.Dockerfile  pyproject.toml
src/dataapp/backend/: app.py
src/dataapp/backend/config/: Clickhouse.py  Settings.py
src/dataapp/frontend/: app.py
src/dataapp/frontend/all_pages/: compare_lines.py  general.py  home.py  infographic.py  line_viewer.py
src/dataapp/frontend/config/: Auth.py  RequestsToBackend.py  Settings.py  constants.py
src/dataapp/frontend/decorators/: add_table_fn.py
src/dataapp/frontend/graphs/: BuildGraph.py  FilterGraphs.py  Graphs.py
src/etl_project/: .coverage  .env.example  Dockerfile  app.py  pyproject.toml
src/etl_project/ETLs/: ETLBaseModel.py
src/etl_project/ETLs/CopperETL/: CopperETL.py
src/etl_project/config/: Connections.py  GetModels.py  Logger.py  Settings.py
src/etl_project/config/models/: AcompanhamentoPCD.py  Intervalos.py  MovPeriodo.py  TipoDiaBilh.py  VwEstacao.py
src/etl_project/config/sql/inserts/: insert_data_ingestion.py
src/etl_project/config/sql/tables/: data_ingestion.py
src/etl_project/config/sql/views/: acompanhamento_pcd.py  bilh_tipo_dia.py  intervalos.py  passag_per_tipo_dia.py  pcd_hora_linha.py
src/etl_project/middleware/: middleware.py
src/etl_project/tests/: AWS_Connections_test.py  CopperEtl_test.py  Logger_test.py  Postgres_Connection_test.py  README.MD  Settings_test.py  test_get_models.py
src/explore_data/: .env.example  pyproject.toml  quartzo_viagens.ipynb
src/explore_data/.ipynb_checkpoints/: extractian_dmo_anl_vw_tot_mov_periodo-checkpoint.ipynb  extraction_dmo_anl_vw_estacao-checkpoint.ipynb
src/explore_data/data-extraction/: extract-jupyter.py
